--- a/styles/style.css
+++ b/styles/style.css
@@ -111,7 +111,7 @@ body {
 }
 
 .currency {
-  padding: 11px;
+  padding: 11px 0;
   box-sizing: border-box;
   border: 1px solid white;
   border-radius: 5px;
