feat: add code to the app.component.ts

--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -255,6 +255,10 @@
   justify-content: center;
 }
 
+.order-form-input.error {
+  background: red;
+}
+
 .order-form-input input {
   padding: 16px 10px;
   background: #211A16;
