--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -62,6 +62,12 @@ body {
   background: linear-gradient(135deg, #ac6115 0%, #9e7a19 100%);
 }
 
+.button:disabled {
+  cursor: not-allowed;
+  color: gray;
+  background: #343434;
+}
+
 .common-title {
   font-family: var(--second-family);
   font-weight: 900;
@@ -71,3 +77,4 @@ body {
   text-align: center;
   color: var(--osnovnoy);
 }
+
